<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/sort_by_name"
        android:id="@+id/byName"
        app:showAsAction="never">

        <menu>
            <item
                android:title="@string/asc"
                android:id="@+id/nameAsc"
                app:showAsAction="never"/>
            <item
                android:title="@string/desc"
                android:id="@+id/nameDesc"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:title="@string/sort_by_date"
        android:id="@+id/byDate"
        app:showAsAction="never">

        <menu>
            <item
                android:title="@string/asc"
                android:id="@+id/dateAsc"
                app:showAsAction="never"/>
            <item
                android:title="@string/desc"
                android:id="@+id/dateDesc"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>