<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPresident"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/name"
        android:background="@drawable/my_edittext"
        android:hint="@string/name"
        android:padding="10dp"
        android:inputType="text"
        android:autofillHints="name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/year"
        android:background="@drawable/my_edittext"
        android:hint="@string/election_date"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:inputType="text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/country"
        android:background="@drawable/my_edittext"
        android:hint="@string/country"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:inputType="text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:padding="30dp"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:id="@+id/add"
            android:text="@string/add"/>

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:text="@string/go_back" />

    </LinearLayout>

</LinearLayout>